--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/MainTabbedPage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/MainTabbedPage.xaml
@@ -5,7 +5,9 @@
             xmlns:views="clr-namespace:PowerWaiters.Views"
             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
             android:TabbedPage.ToolbarPlacement="Bottom"
-            SelectedTabColor="Black"
+            BarBackgroundColor="#6000FF"
+            SelectedTabColor="White"
+            UnselectedTabColor="#A0FFFFFF"
             BackgroundColor="#036000ff">
     <views:ProfilePage IconImageSource="https://www.jing.fm/clipimg/full/419-4198835_clip-art-black-and-white-user-name-icon.png" Title="Профиль"/>
     <views:MainPage IconImageSource="https://pic.onlinewebfonts.com/svg/img_56797.png" Title="Главная"/>
